--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prod": "next prod"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@next/font": "14.0.3",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
@@ -23,6 +26,7 @@
     "@uniswap/v3-sdk": "^3.9.0",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
+    "framer-motion": "^11.0.5",
     "hardhat": "^2.14.0",
     "next": "14.0.3",
     "react": "18.2.0",
